# SecureCore

./: # RCHITECTURE.md  .gitignore  OPS_CONTRACT.md  README.md  Security Local Bootstrap.md  THREAT_MODEL.md
docs/operations/: SecureCore Help Bot System Prompt.md
frontdoor/: Cargo.toml
frontdoor/src/: main.rs
frontdoor/static/: app.js  index.html  styles.css
securecore/: .env.example  __init__.py  app.py  config.py  requirements.txt
securecore/agents/: __init__.py  base.py  chain_auditor.py  cognitive.py  containment.py  decoy_orchestrator.py  escalation.py  profiler.py  watcher.py
securecore/chat/: __init__.py  executor.py  ledger.py  models.py  projection.py  router.py
securecore/cli/: __init__.py  cell_report.py  common.py  main.py  seed_admin.py
securecore/collectors/: __init__.py  desktop.py  keyboard_mouse.py  screen.py
securecore/control/: __init__.py  command_bus.py  reaper.py  routes.py  shun.py
securecore/core/: __init__.py  auth.py  fingerprint.py  models.py
securecore/decoys/: __init__.py  content.py  routes.py
securecore/forge/: __init__.py  cli.py  index.py  pulse_writer.py  reader.py  record.py  wal.py  writer.py
securecore/help/: __init__.py  bot.py  code_index.py  config.py  corpus.py  runtime_context.py
securecore/llm/: __init__.py  broker.py
securecore/log_streams/: __init__.py  schemas.py  streams.py
securecore/logging/: __init__.py  schemas.py  streams.py
securecore/permissions/: __init__.py  gate.py  (+2 more)
security_local/: .env.example  app.py
tests/: __init__.py  test_confidence.py  test_hid.py  test_reaper.py
(+77 files in other folders)
